src/test/deca/context/invalid/homemade/tests/test_non_implemented/test_cast_invalid_void_class.deca
// test invalide de la règle cast


class A {

}
{
    A a = new A();
    (void) (a);
}